objects/zqu__ProductRatePlanCharge__c.object
<CustomObject>
    <description>The Charges associated with a Rate Plan.</description>
    <fields>
        <fullName>zqu__AccountingCode__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_One_Time_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To One Time Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Recurring_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Recurring Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Usage_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__DefaultQuantity__c</fullName>
        <description>The Default Quantity of the Rate Plan Charge.</description>
        <inlineHelpText>The Default Quantity of the Rate Plan Charge.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>The Description of the Rate Plan Charge.</description>
        <inlineHelpText>The Description of the Rate Plan Charge.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Apply_Type__c</fullName>
        <label>Discount - Apply Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Level__c</fullName>
        <label>Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RatePlan</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ListPrice__c</fullName>
        <description>The List Price of the Rate Plan Charge.</description>
        <inlineHelpText>The List Price of the Rate Plan Charge.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__MaxQuantity__c</fullName>
        <description>The Maximum Quantity of the Rate Plan Charge.</description>
        <inlineHelpText>The Maximum Quantity of the Rate Plan Charge.</inlineHelpText>
        <label>Maximum Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MinQuantity__c</fullName>
        <description>The Minimum Quantity of the Rate Plan Charge.</description>
        <inlineHelpText>The Minimum Quantity of the Rate Plan Charge.</inlineHelpText>
        <label>Minimum Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Model__c</fullName>
        <description>The Model of the Rate Plan Charge.</description>
        <inlineHelpText>The Model of the Rate Plan Charge.</inlineHelpText>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Tiered</fullName>
                </value>
                <value>
                    <fullName>Overage</fullName>
                </value>
                <value>
                    <fullName>Tiered with Overage</fullName>
                </value>
                <value>
                    <fullName>Discount-Fixed Amount</fullName>
                </value>
                <value>
                    <fullName>Discount-Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PrepaymentPeriods__c</fullName>
        <description>The number of Periods that shall be Prepaid.</description>
        <inlineHelpText>The number of Periods that shall be Prepaid.</inlineHelpText>
        <label>Prepaid Periods</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PriceTable__c</fullName>
        <description>zuora rateplan charge price table</description>
        <label>Price Table</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Rate Plan associated with this Rate Plan Charge.</description>
        <inlineHelpText>The Rate Plan associated with this Rate Plan Charge.</inlineHelpText>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charges</relationshipLabel>
        <relationshipName>R00N40000001mFVKEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__RecurringPeriod__c</fullName>
        <description>The Recurring Period of the Rate Plan Charge.</description>
        <inlineHelpText>The Recurring Period of the Rate Plan Charge.</inlineHelpText>
        <label>Recurring Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__RevRecCode__c</fullName>
        <description>The revenue recognition code for the given charge.  Used for facilitating recognizing revenue within accounting systems or reporting.</description>
        <label>Rev Rec Code</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Type__c</fullName>
        <description>The Type of the Rate Plan Charge.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__UOM__c</fullName>
        <description>The Unit of Measure for this Rate Plan Charge.</description>
        <inlineHelpText>The Unit of Measure for this Rate Plan Charge.</inlineHelpText>
        <label>UOM</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods__c</fullName>
        <description>Determines the period when discount charge model charge is added.</description>
        <label>Up To How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ZUnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UOM</label>
        <referenceTo>zqu__ZUnitOfMeasure__c</referenceTo>
        <relationshipLabel>Unit Of Measure</relationshipLabel>
        <relationshipName>ZUnit_Of_Measure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZUom_Id__c</fullName>
        <description>Zuora UOM Id</description>
        <label>Uom Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Rate Plan Charge.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Rate Plan Charge.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Rate Plan Charge</label>
    <nameField>
        <label>Rate Plan Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>